2007-04-10  Junichi Uekawa  <dancer@debian.org>

	* testsuite/run-test.sh: add lenny

2007-04-03  Junichi Uekawa  <dancer@debian.org>

	* Makefile: install pbuilder-satisfydepends-funcs,
	pbuilder-satisfydepends-checkparams

2007-04-02  Loic Minier <lool@dooz.org>
	* pbuilder-satisfydepends-aptitude: check whether the dummy
	dependencies package was truly installed or error out; catches
	situation where "aptitude" did not keep the dummy package but claimed
	the installation was successful.

2007-04-01  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-user-mode-linux.1, etc.: 409135: SEE ALSO fix.

2007-04-01  Loic Minier <lool@dooz.org>

	* pbuilder-satisfydepends*:
	- Modularize with new -funcs and -checkparams shared sources.
	- New pbuilder-satisfydepends-aptitude resolver based on aptitude.
	- Cleanups.

2007-03-31  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-user-mode-linux: spacing fix.

	* pbuilder-modules: re-refix. 391915
	"The fix for #391915 as applied in 0.165 isn't quite correct,
	it still has an unconditional rm -f "$BUILDPLACE/etc/$a" outside
	the check for an existing /etc/$a to copy into its place."
	From Paul TBBle Hampson <Paul.Hampson@Pobox.com>

2007-03-30  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-user-mode-linux : '-n "${PBUILDER_COW}"' is not a good
	 condition since it will change default behavior for pbuilder create/update.
	Just use UML_IP=dhcp for condition.

2007-03-29  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-uml.conf.5: 
	* pbuilder-user-mode-linux.1: add documentation for 'dhcp' option.

	* pbuilder-user-mode-linux: allow network dhcp configuration 
	415544
	From: Paul TBBle Hampson <Paul.Hampson@Pobox.com>

2007-03-28  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-user-mode-linux: make more vivid notes on what is
	executed inside the user-mode-linux

	* pbuilder-modules: for pbuilder-user-mode-linux; only warn if
	host network configuration files are not available, and assume it