@@ -1,4 +1,4 @@
-.TH "pbuilder" 8 "2005 Jul 10" "Debian" "pbuilder"
+.TH "pbuilder" 8 "2007 Apr 10" "Debian" "pbuilder"
 .SH NAME
 pbuilder \- personal package builder
 .SH SYNOPSIS
@@ -39,8 +39,8 @@ the given options and settings in the configuration file
 for the base.tgz.
 
 For example, to switch the distribution of an existing
-base.tgz to etch, specify the
-.B "\-\-distribution etch \-\-override\-config" 
+base.tgz to lenny, specify the
+.B "\-\-distribution lenny \-\-override\-config" 
 options to update.
 
 .TP
@@ -194,8 +194,8 @@ should do.
 .BI "\-\-distribution [" "distribution" "]"
 Specifies the distribution used. Currently the supported values are
 .B "sid"
-.B "sarge"
 .B "etch"
+.B "lenny"
 and 
 .B "experimental".
 
