@@ -17,7 +17,7 @@ USEDEVFS=no
 BUILDRESULT=/var/cache/pbuilder/result/
 
 # specifying the distribution forces the distribution on "pbuilder update"
-#DISTRIBUTION=sarge
+#DISTRIBUTION=lenny
 #specify the cache for APT 
 APTCACHE="/var/cache/pbuilder/aptcache/"
 APTCACHEHARDLINK="yes"
