@@ -6,12 +6,13 @@ pbuilder (0.166) UNRELEASED; urgency=low
   * Bug fix: "pbuilder-uml: --uml-ip broken", thanks to Paul TBBle Hampson
     (Closes: #416920).
   * Manual page SEE ALSO fix, '.RI'->'.BR' (closes: #409135)
-
+  * minor update to documentation.
+  
   [ Loic Minier ]
   * New pbuilder-satisfydepends-aptitude resolver based on aptitude; based on
     an idea by Mike Hommey; closes: #337015.
-
- -- Junichi Uekawa <dancer@debian.org>  Mon,  2 Apr 2007 08:42:59 +0900
+  
+ -- Junichi Uekawa <dancer@debian.org>  Tue, 10 Apr 2007 08:50:37 +0900
 
 pbuilder (0.165) unstable; urgency=low
 
