@@ -1,5 +1,13 @@
 2007-04-10  Junichi Uekawa  <dancer@debian.org>
 
+	* Documentation/pbuilder-doc.xml: update documentation
+
+	* pbuilder-modules: say lenny instead of sarge
+
+	* pbuilder.8: lenny is supported architecture, not sarge
+
+	* pbuilderrc: make lenny default
+
 	* testsuite/run-test.sh: add lenny
 
 2007-04-03  Junichi Uekawa  <dancer@debian.org>
